--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "allpaths",
   "version": "1.0.0",
-  "description": "This is am module for getting all the absoulte paths of a given path to a working directory",
+  "description": "This is am module for getting all the absolute paths of a given path to a working directory",
   "main": "allPaths.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
