Major bug clean up for filtering for hidden, extendsion, and ONLY_dir duplication of paths being appended. Also created a abstarctio for filtering the paths called add_to_tree(), added prop path accessibility instead of passing the _path and _opts arguments. Filter the paths before the foor lop and making the paths absolute in the paths array.

--- a/package.json
+++ b/package.json
@@ -1,17 +1,14 @@
 {
   "name": "allpaths",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "This is am module for getting all the absolute paths of a given path to a working directory",
   "main": "allPaths.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/andreGarvin/allpaths-js.git"
   },
   "author": "Andre Garvin <Yea Boi>",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/andreGarvin/allpaths-js/issues"
   },
